[package]
name = "advent-of-code-2019"
version = "0.1.0"
authors = ["Charlie Ciccia <charlie.ciccia@singlewire.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple-error = "0.2.1"
regex = "1.3.1"
itertools = "0.8.2"
rayon = "1.1"
ordered-float = "1.0.2"
num = "0.2.0"
num-derive = "0.3"
num-traits = "0.2"


[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false